# hibs-bet-racing

./: .env.example  .env.instpp.example  .env.save  .gitignore  .rate_limit_state.json  ACQUIRE_LISTING.md  AGENTS.md  DATA_ROOM.md  DATA_UPGRADE.md  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.instpp.yml  docker-compose.yml  main.py  push_scores.py:push_scores.py  pyproject.toml  requirements.txt  start.sh
data/: batch_enrich_recovery_progress.json  schema.sql
deploy/: apply-line-shop-football.sh  apply-racing-go-live.sh  apply-trading-daemon.sh  apply-vps-exchange-ev.sh  apply-vps-production-racing.sh  apply-vps-racing-measurement.sh  apply-vps-racing-scrape-first-institutional.sh  apply-vps-unified-ui-theme.sh  apply-win-engine-env.sh  build-football-inst-overlay.sh  cron-hibs-prediction-results-all.sh  cron-hibs-racing-scrape.sh  cron-hibs-win-engine-backtest.sh  gunicorn-racing.conf.py  hibs-racing.service  hibs-trading-daemon.service  mount-hibs-ramdisk.sh  repair-feature-store-sqlite.sh  vps-autonomous-install.sh  vps-consolidated-gold-standard.sh  vps-drop-exchange-ev-modules.sh  vps-industry-edge-racing.sh  vps-pull-exchange-ev.sh  vps-sync-football-inst-overlay.sh  vps-sync-production-lockdown.sh  vps-sync-racing-from-github.sh
docker/: crontab  entrypoint.sh
docs/: AD_GUARD_BUYER.md  AD_GUARD_INSTITUTIONAL_STACK.md  AD_GUARD_SALES_TECH_SPEC.md  AGENT_LEDGER_BUYER.md  AGENT_LEDGER_SALES_TECH_SPEC.md  AI_KIT_BUYER.md  AI_KIT_SALES_TECH_SPEC.md  ALTDATA_BUYER.md  ALTDATA_SALES_TECH_SPEC.md  BUYER_EVIDENCE_PACK.md  COMPLIANCE_LOGGER_BUYER.md  COMPLIANCE_LOGGER_SALES_TECH_SPEC.md  DEMO.md  DEMO_GOLD.md  DEMO_VIDEO_PORTFOLIO_ALL.md  DEMO_VIDEO_WEBHOOK_MESH.md  DRIFT_GATE_BUYER.md  DRIFT_GATE_SALES_TECH_SPEC.md  FORENSIC_ARCHITECTURE_TRUTH.md  FORENSIC_HARDENING_AUDIT.md  GOVERNOR-PORTFOLIO.md  HEALTH_TELEMETRY_BUYER.md  HEALTH_TELEMETRY_HIPAA_PACK.md  HEALTH_TELEMETRY_HOSPITAL_PILOT.md  HEALTH_TELEMETRY_SALES_TECH_SPEC.md  INSTITUTIONAL_ENTERPRISE_STACK.md  INSTITUTIONAL_STANDARD.md  INST_PLUS_BUYER_DILIGENCE_SCOPE.md  INST_PLUS_DEEP_DIVE_ALL_7.md  INST_PLUS_DEEP_DIVE_COMPLIANCE_PROXY.md  INST_PLUS_DILIGENCE_PACK.md  INST_PLUS_GOLD_STANDARD.md  INST_PLUS_PLATFORM_COMPARE.md  INST_PLUS_PRE_REV_VALUATION.md  INST_PLUS_PRODUCTION_ARCHITECTURE.md  INST_PLUS_STRATEGY.md  INST_PLUS_TEST_AND_DEMO.md  LINE_SHOP_DEPLOYMENT.md  MATCHBOOK_API_REQUEST.md  MODEL_GOVERNOR_BUYER.md  (+33 more)
exports/: backtest_review_20260603.json  benchmark_gates_60d.json  config_variant_benchmark_90d.json  config_variant_benchmark_full.json  config_variant_benchmark_full_partial.json  gate2_sensitivity_60d.json  gate_lane_walkforward.json  gate_lane_walkforward_progress.json  gate_regression_90d.json  gate_walkforward.json  gate_walkforward_progress.json  gate_walkforward_snapshots.json  institutional_check_90d.json  live_vs_gate1_comparison_20260603.json  production_benchmark_60d.json  production_benchmark_90d.json
ingest/: config.yaml
migrations/: 004_enrich_historical_runners.sql  005_win_engine_predictions.sql  006_trading_engine.sql  007_liquidity_router.sql  008_win_engine_field_calibration.sql
redis_scripts/: market_steam.lua
scripts/: _lib.sh  batch_enrich_recovery.py  chaos_instpp.sh  check_env.py  ci_production_preflight.sh  ci_release_gate.sh  clean_runtime_tree.sh  compare_config_variants.py  cron_refresh_wrapper.sh  daily_refresh.sh  data_producer_repair.sh  demo_ad_guard.sh  demo_agent_ledger.sh  demo_ai_kit.sh  demo_altdata.sh  demo_compliance_logger.sh  demo_drift_gate.sh  demo_gold.sh  demo_gold_down.sh  demo_gold_up.sh  demo_health_telemetry.sh  demo_instpp.sh  demo_mg_gold.sh  demo_model_governor.sh  demo_phase2_all.sh  demo_portfolio_all.sh  demo_proxy_risk.sh  demo_ready.sh  demo_spend_guard.sh  demo_webhook_mesh.sh  demo_webhook_replay.sh  docker_sku_rigorous_one.sh  export_ad_audit.sh  (+60 more)
(+889 files in other folders)
