[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hibs-racing"
version = "0.1.0"
description = "Offline racing NLP + place/EW research engine (separate from hibs-bet football)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]
instpp = ["aiohttp>=3.9", "uvloop>=0.19; sys_platform != 'win32'"]
nlp = ["spacy>=3.7"]
ranker = ["lightgbm>=4.0", "scikit-learn>=1.3", "shap>=0.44"]
api = ["requests>=2.28"]
scraper = ["requests>=2.28", "beautifulsoup4>=4.12", "lxml>=4.9"]
web = ["flask>=3.0", "requests>=2.28"]

[project.scripts]
hibs-racing = "hibs_racing.cli:main"
hibs-racing-web = "hibs_racing.web:main"
compliance-log = "compliance_log.cli:main"
proxy-risk = "proxy_risk.cli:main"
altdata = "altdata.cli:main"
ai-kit = "ai_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
